end point para encontrar especie por nombre y descripcion por nombre, si si para naturalista
